--- a/Front/styles/global.css
+++ b/Front/styles/global.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: #121212;
+  background-color: #f0f4f4;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
